--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My First React Project</title>
+    <title>Forensic Files</title>
   </head>
   <body>
     <div id="react-app-root">
